<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">날씨아나</string>
    <string name="action_settings">Settings</string>
    <string name="set_time_info_text">매일 알람이 울릴 시간을 선택하세요</string>
    <string name="title_activity_main">최윤진의 날씨아나</string>
    <string name="alarm_list">알람 리스트</string>
    <string name="title_activity_popup">좋은 아침입니다 ^_^</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="downloading_text">알람 파일을 다운로드 중입니다</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="play_text">알람 미리듣기</string>
    <string name="alarmtoggle">Alarm Toggle</string>
    <string name="alarmtoggle_text">알람 켜기/끄기</string>
    <string name="info_btn_text">앱 정보 보기</string>
    <string name="set_time_text">시간저장</string>
    <string name="snooze_btn_text">5분만 더 잘래요</string>
    <string name="alarm_stop_text">알람 끄기</string>
    <string name="timer_string">좋은 아침입니다~</string>
    <string name="weather_btn_text">기상청 날씨 정보</string>
    <string name="title_activity_weather_info">오늘의 날씨 정보</string>
    <string name="hello_world">Hello world!</string>
    <string name="goto_home_text">날씨아나 앱으로 돌아가기</string>
    <string name="close">닫기</string>

</resources>