<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8dada"
    android:gravity="center"
    android:layout_margin="@dimen/no_margin"
    android:layout_marginBottom="@dimen/no_margin"
    android:layout_marginLeft="@dimen/no_margin"
    android:layout_marginRight="@dimen/no_margin"
    android:layout_marginTop="@dimen/no_margin"
    android:paddingBottom="@dimen/no_margin"
    android:paddingLeft="@dimen/no_margin"
    android:paddingRight="@dimen/no_margin"
    android:paddingTop="@dimen/no_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/no_margin"
        android:src="@drawable/main" />

    <TextView
        android:id="@+id/intro_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="56dp"
        android:text="@string/set_time_info_text" />

      	<TimePicker
      	    android:id="@+id/timePicker"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_alignLeft="@+id/intro_txt"
      	    android:layout_below="@+id/intro_txt"
      	    android:layout_marginTop="@dimen/activity_vertical_margin" />

	    <Button
	        android:id="@+id/set_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/timePicker"
	        android:layout_alignRight="@+id/alarmtoggle"
	        android:onClick="onSetTimeClicked"
	        android:text="@string/set_time_text" />

	    <TextView
	        android:id="@+id/alarmtoggle_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/update_btn"
	        android:layout_centerVertical="true"
	        android:text="@string/alarmtoggle_text"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
        
	    <ToggleButton
	        android:id="@+id/alarmtoggle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/play_btn"
	        android:layout_centerVertical="true"
	        android:onClick="onAlarmToggleClicked"
	        android:text="@string/alarmtoggle" />


    <Button
        android:id="@+id/weather_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="24dp"
        android:onClick="onWeatherViewClicked"
        android:text="@string/weather_btn_text" />


    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/play_text"
        android:layout_alignBottom="@+id/play_text"
        android:layout_alignRight="@+id/update_btn"
        android:onClick="onPreplayClicked"
        android:text="@string/play_text" />

    <TextView
        android:id="@+id/play_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/update_btn"
        android:layout_alignLeft="@+id/update_btn"
        android:text="@string/play_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weather_info"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:onClick="onUpdateClicked"
        android:text="@string/info_btn_text" />



</RelativeLayout>